# cargo-real-deps

./: Cargo.toml  README.md
src/: main.rs
