[package]
name = "cargo-real-deps"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Geal/cargo-real-deps"
keywords = ["cargo", "dependencies"]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "Cargo subcommand to check which crates are built depending on features"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.39"
